<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Aktywnosc1">

    <Button
        android:id="@+id/button"
        android:layout_width="382dp"
        android:layout_height="111dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="numerek1"
        android:text="@string/Notatki"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="380dp"
        android:layout_height="117dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="numerek2"
        android:text="@string/Przypomnienia"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.788" />

    <Button
        android:id="@+id/button3"
        android:layout_width="382dp"
        android:layout_height="115dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="numerek3"
        android:text="@string/Kontakty"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.643" />

    <Button
        android:id="@+id/button4"
        android:layout_width="384dp"
        android:layout_height="138dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="numerek4"
        android:text="@string/Multimedia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912" />

</androidx.constraintlayout.widget.ConstraintLayout>